added main content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam nulla quo quis at exercitationem nesciunt reprehenderit tenetur voluptas, aliquam cumque totam quasi autem, molestiae, cum dignissimos excepturi nobis explicabo voluptate!</p>
 </body>
 </html>
